in-cluster/networking/ddb-proxy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ddb-proxy
  labels:
    app.kubernetes.io/name: ddb-proxy
    app.kubernetes.io/component: ddb-proxy
    app.kubernetes.io/part-of: foundry
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: ddb-proxy
    app.kubernetes.io/component: ddb-proxy
    app.kubernetes.io/part-of: foundry
  ports:
    - port: 80
      targetPort: http
      name: http
