in-cluster/networking/foundry-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foundry
  labels:
    app.kubernetes.io/name: foundry
    app.kubernetes.io/component: foundry
    app.kubernetes.io/part-of: foundry
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: foundry
    app.kubernetes.io/component: foundry
    app.kubernetes.io/part-of: foundry
  ports:
    - port: 80
      targetPort: http
      name: http
