in-cluster/networking/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foundry
spec:
  selector:
    app: foundry
  ports:
    - port: 80
      targetPort: web
