in-cluster/networking/foundry-ingress-https.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foundry-ingress-https
  labels:
    app.kubernetes.io/name: foundry-ingress-https
    app.kubernetes.io/component: foundry
    app.kubernetes.io/part-of: foundry
    app.kubernetes.io/managed-by: argocd
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vtt.home.derwitt.net`)
      priority: 10
      services:
        - name: foundry
          port: http
  tls:
    secretName: vtt-home-derwitt-net-ingress-cert
